fix: change color of buttons for contrast accessibility
change color of train page and predict page buttons for contrast accesibility and
refactor buttons to MS-UI-Fabric. Also, change progress icons to
MS-UI-Fabric progress spinners

issue-5969484

--- a/src/react/components/common/common.scss
+++ b/src/react/components/common/common.scss
@@ -91,7 +91,6 @@
 
 .loading-container { 
   display: flex;
-  align-items: center;
 }
 
 .loading-description {
